; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_postprocess_res.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_postprocess_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Q_hash_group_mode = common dso_local global i64 0, align 8
@R_cnt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @postprocess_res() #0 {
  %1 = load i64, i64* @Q_hash_group_mode, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @postprocess_res_group_mode()
  br label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @R_cnt, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %5
  br label %11

9:                                                ; preds = %5
  %10 = call i32 (...) @heap_sort_res()
  br label %11

11:                                               ; preds = %9, %8, %3
  ret void
}

declare dso_local i32 @postprocess_res_group_mode(...) #1

declare dso_local i32 @heap_sort_res(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
